--- a/client/src/components/Filter/Filter.css
+++ b/client/src/components/Filter/Filter.css
@@ -34,9 +34,7 @@ height: 50px;
 
 @media screen and (min-width: 320px){
     .classDivFilterOrigin{
-        display: flex;
         flex-direction: row;
-        position: relative;
         flex-wrap: wrap;
         align-content: flex-start;
         justify-content: center;
@@ -46,9 +44,6 @@ height: 50px;
         height: 350px;
     }
     .classSelectFilt{
-        background-color: black;  
-        color: cyan;
-        border-radius: 15px;
         font-size: 10px;
         width: 140px;
         height: 20px;
@@ -59,82 +54,34 @@ height: 50px;
         height: 35px;
         }
         .classOptionFilt{
-            background-color: rgb(9, 215, 215);
-            color: black;
             font-size: 11px;
         }
 }
 @media screen and (min-width: 375px){
-    .classDivFilterOrigin{
-        display: flex;
-        flex-direction: row;
-        position: relative;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        justify-content: center;
-        left: 6px;
-        top: 55px;
-        width: 95%;
-        height: 350px;
-    }
     .classSelectFilt{
-        background-color: black;  
-        color: cyan;
-        border-radius: 15px;
         font-size: 11px;
         width: 150px;
-        height: 20px;
     }
     .classDivFilter{
-        padding-left:10px;
         width: 160px;
         height: 40px;
-        }
-        .classOptionFilt{
-            background-color: rgb(9, 215, 215);
-            color: black;
-            font-size: 11px;
         }
 }
 @media screen and (min-width: 425px){
     .classDivFilterOrigin{
-        display: flex;
-        flex-direction: row;
-        position: relative;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        justify-content: center;
         left: 0px;
-        top: 55px;
-        width: 95%;
-        height: 350px;
     }
     .classSelectFilt{
-        background-color: black;  
-        color: cyan;
-        border-radius: 15px;
         font-size: 11px;
-        width: 150px;
-        height: 20px;
     }
     .classDivFilter{
-        padding-left:10px;
         width: 170px;
-        height: 40px;
-        }
-        .classOptionFilt{
-            background-color: rgb(9, 215, 215);
-            color: black;
-            font-size: 11px;
         }
 }
 @media screen and (min-width: 768px){
     .classDivFilterOrigin{
-        display: flex;
-        flex-direction: row;
-        position: relative;
+        justify-content: start;
         flex-wrap: nowrap;
-        justify-content: flex-start;
         left: 55px;
         top: 35px;
         width: 10px;
@@ -143,30 +90,15 @@ height: 50px;
     }
 @media screen and (min-width: 1024px) {
     .classDivFilterOrigin{
-        display: flex;
-        flex-direction: row;
-        position: relative;
         left: 140px;
         top: 20px;
         width: 170px;
-        height: 310px;
     }
     .classSelectFilt{
-        background-color: black;  
-        color: cyan;
-        border-radius: 15px;
         font-size: 12px;
         width: 170px;
-        height: 20px;
     }
-    .classDivFilter{
-        padding-left:10px;
-        width: 170px;
-        height: 40px;
-        }
         .classOptionFilt{
-            background-color: rgb(9, 215, 215);
-            color: black;
             font-size: 13px;
         }
     }
@@ -177,8 +109,6 @@ height: 50px;
             height: 50px;
             }
             .classDivFilterOrigin{
-                position: relative;
-                display: flex;
                 flex-direction: column;
                 align-items: flex-start;
                 top: 90px;
@@ -187,46 +117,22 @@ height: 50px;
                 height: 300px;
             }
             .classSelectFilt{
-                background-color: black;  
-                color: cyan;
-                border-radius: 15px;
                 font-size: 14px;
                 width: 195px;
                 height: 24px;
             }
             .classOptionFilt{
-                background-color: rgb(9, 215, 215);
-                color: black;
                 font-size: 14px;
             }
     }
 @media screen and (min-width: 1536px ){
-        .classDivFilter{
-            padding:0px;
-            width: 160px;
-            height: 50px;
-            }
             .classDivFilterOrigin{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                position: relative;
                 top: 120px;
-                left: 45px;
-                width: 200px;
-                height: 300px;
             }
             .classSelectFilt{
-                background-color: black;  
-                color: cyan;
-                border-radius: 15px;
                 font-size: 15px;
-                width: 195px;
-                height: 24px;
             }
             .classOptionFilt{
-                background-color: rgb(9, 215, 215);
-                color: black;
                 font-size: 15px;
             }
     }
