--- a/client/src/components/Introduction/Introduction.css
+++ b/client/src/components/Introduction/Introduction.css
@@ -3,7 +3,8 @@ background-image: url(../../img/16.jpg);
 background-size: cover;
 background-color: black;
 background-repeat: no-repeat;
-padding: 24.4%;
+width: 99.9%;
+height: 721px;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -45,3 +46,34 @@ align-items: center;
     background-color:cyan;
     color: black;
 }
+
+/*////////////////// ///////////*/
+
+
+@media screen and (min-width: 320px){
+    .buttonsIntro{
+        font-size: 15px;
+    }
+    #idDiv1{
+        height: 768px;
+    }
+}
+
+@media screen and (min-width: 375px){
+    .buttonsIntro{
+        font-size: 20px;
+    }
+    #idDiv1{
+        height: 768px;
+    }
+}
+@media screen and (min-width: 768px){
+    #idDiv1{
+        width: 99.9%;
+        height: 768px;
+    }
+    .buttonsIntro{
+        font-size: 25px;
+    }
+}
+
