--- a/client/src/components/LoginAndSignUp/LoginAndSignUp.css
+++ b/client/src/components/LoginAndSignUp/LoginAndSignUp.css
@@ -63,3 +63,31 @@
     height: 42px;
     position: static;
 }
+
+/*////////////////////*/
+
+
+@media screen and (min-width: 320px){
+.classDivContent{
+    bottom: 19px;
+    width: 290px;
+    height: 290px;
+}
+.classDivSwitch{
+    width: 309px;
+}
+.classDivOne{
+    position: relative;
+    bottom: 50px;
+}
+}
+@media screen and (min-width: 320px){
+    .classDivContent{
+        width: 410px;
+        height: 290px;
+    }
+    .classDivSwitch{
+        width: 429px;
+        height: 42px;
+    }
+}
