--- a/client/src/components/LoginAndSignUp/LoginAndSignUp.css
+++ b/client/src/components/LoginAndSignUp/LoginAndSignUp.css
@@ -78,7 +78,8 @@
 }
 .classDivOne{
     position: relative;
-    bottom: 50px;
+    top: 40px;
+    height: 400px;
 }
 }
 @media screen and (min-width: 768px){
